--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
+    "stripe": "^18.1.0",
     "twilio": "^3.46.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
@@ -75,6 +76,7 @@
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
     "@types/node-gcm": "^1.0.0",
+    "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -89,7 +91,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
