--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/websockets": "^7.1.3",
     "@paypal/checkout-server-sdk": "^1.0.2",
+    "@types/cli-progress": "^3.11.6",
     "@types/morgan": "^1.9.2",
     "apple-signin-auth": "^1.5.1",
     "aws-sdk": "^2.718.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
+    "cli-progress": "^3.12.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
@@ -74,7 +76,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
+    "@types/node": "^16.18.126",
     "@types/node-gcm": "^1.0.0",
     "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.8",
