--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/estree": "^1.0.7",
     "@types/express": "^4.17.13",
     "@types/jest": "25.1.4",
     "@types/node": "^16.11.7",
     "@types/node-gcm": "^1.0.0",
+    "@types/serve-static": "^1.13.10",
     "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
