upgrade node engine to 18.x for Heroku compatibility

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "npm": "8.5.5",
-    "node": "16.15.0"
-  }
+    "node": "18.x",
+    "npm": "9.x"
+  }  
 }
