--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".", // Required for paths
+    "paths": {
+      "src/*": ["src/*"]
+    },
     "incremental": true,
     "lib": ["es2017"]
   },
