--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
+    "heroku-postbuild": "npm run build",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
