--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": ".", // Required for paths
-    "paths": {
-      "src/*": ["src/*"]
-    },
+    "baseUrl": "./",
     "incremental": true,
     "lib": ["es2017"]
   },
