--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "lib": ["es2017"]
+    "incremental": true
   },
   "exclude": ["node_modules", "dist"]
 }
