--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main.js",
-"start:prod": "node dist/src/main.js",
+    "start:prod": "node dist/main",
     "heroku-postbuild": "npm run build",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -36,6 +35,7 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/websockets": "^7.1.3",
     "@paypal/checkout-server-sdk": "^1.0.2",
+    "@sendgrid/mail": "^8.1.5",
     "@types/cli-progress": "^3.11.6",
     "@types/morgan": "^1.9.2",
     "apple-signin-auth": "^1.5.1",
