--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "copy:views": "copyfiles -u 2 src/views/**/* dist/src/views",
+    "build": "nest build && npm run copy:views",
     "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main.js",
@@ -39,7 +40,7 @@
     "@types/cli-progress": "^3.11.6",
     "@types/morgan": "^1.9.2",
     "apple-signin-auth": "^1.5.1",
-    "aws-sdk": "^2.718.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "cli-progress": "^3.12.0",
@@ -87,6 +88,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
