Fix Heroku start path

--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "copy:views": "copyfiles -u 2 src/views/**/* dist/src/views",
-    "build": "nest build && npm run copy:views",
-    "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/src/main.js",
-    "start:prod": "node dist/main",
-    "heroku-postbuild": "npm run build",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
+"scripts": {
+  "prebuild": "rimraf dist",
+  "copy:views": "copyfiles -f src/views/**/* dist/src/views",
+  "build": "nest build && npm run copy:views",
+  "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
+  "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+  "start": "node dist/main.js",
+  "start:prod": "node dist/main.js",
+  "heroku-postbuild": "npm run build",
+  "start:dev": "cross-env NODE_ENV=development nest start --watch",
+  "start:debug": "nest start --debug --watch",
+  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "test:cov": "jest --coverage",
+  "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+  "test:e2e": "jest --config ./test/jest-e2e.json"
+},
+
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.4",
     "@nestjs/common": "^7.0.0",
