Fix:Replaced the pit

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 "scripts": {
   "prebuild": "rimraf dist",
   "copy:views": "copyfiles -f src/views/**/* dist/src/views",
-  "build": "nest build && npm run copy:views",
+  "build": "nest build",
   "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
   "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-  "start": "node dist/main.js",
-  "start:prod": "node dist/main.js",
+"start": "node dist/src/main.js",
+"start:prod": "node dist/src/main.js",
   "heroku-postbuild": "npm run build",
   "start:dev": "cross-env NODE_ENV=development nest start --watch",
   "start:debug": "nest start --debug --watch",
