--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "build": "nest build",
   "drop-index": "ts-node -r tsconfig-paths/register scripts/drop-notification-index.ts",
   "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-"start": "node dist/src/main.js",
-"start:prod": "node dist/src/main.js",
+"start": "node dist/main.js",
+"start:prod": "node dist/main.js",
   "heroku-postbuild": "npm run build",
   "start:dev": "cross-env NODE_ENV=development nest start --watch",
   "start:debug": "nest start --debug --watch",
